4022a88cc50b7ec673fadfbc70deed1e1895aca3 fix: CSS changes to allow split buttons to be active for styling libraries
Jira Issue DD-2342

ef71b5323668ef44e45f0478f02ecff5beffd425 fix: Stop border appearing around split buttons for bs4/5

Jira Issue DD-2376

Sync to source repo @ef71b5323668ef44e45f0478f02ecff5beffd425

--- a/css/buttons.bootstrap5.css
+++ b/css/buttons.bootstrap5.css
@@ -259,6 +259,19 @@ div.dt-btn-split-wrapper button.dt-btn-split-drop {
   border-top-right-radius: 0.25rem !important;
   border-bottom-right-radius: 0.25rem !important;
 }
+div.dt-btn-split-wrapper:active:not(.disabled) button, div.dt-btn-split-wrapper.active:not(.disabled) button {
+  background-color: #5a6268;
+  border-color: #545b62;
+}
+div.dt-btn-split-wrapper:active:not(.disabled) button.dt-btn-split-drop, div.dt-btn-split-wrapper.active:not(.disabled) button.dt-btn-split-drop {
+  box-shadow: none;
+  background-color: #6c757d;
+  border-color: #6c757d;
+}
+div.dt-btn-split-wrapper:active:not(.disabled) button:hover, div.dt-btn-split-wrapper.active:not(.disabled) button:hover {
+  background-color: #5a6268;
+  border-color: #545b62;
+}
 
 div.dataTables_wrapper div.dt-buttons.btn-group button.btn:last-child:first-of-type {
   border-radius: 4px !important;
@@ -271,7 +284,7 @@ div.dataTables_wrapper div.dt-buttons.btn-group div.btn-group button.btn:first-o
   border-top-right-radius: 0px !important;
   border-bottom-right-radius: 0px !important;
 }
-div.dataTables_wrapper div.dt-buttons.btn-group div.btn-group:last-child {
+div.dataTables_wrapper div.dt-buttons.btn-group div.btn-group div.dt-btn-split-drop:last-child {
   border: 1px solid #6c757d;
   border-top-right-radius: 4px !important;
   border-bottom-right-radius: 4px !important;
