--- a/css/buttons.bootstrap5.css
+++ b/css/buttons.bootstrap5.css
@@ -116,16 +116,27 @@ div.dt-button-collection {
   position: absolute;
   z-index: 2001;
   width: 100%;
+  background-color: white;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+  padding: 0.5rem 0;
+  max-width: none;
 }
 div.dt-button-collection div.dropdown-menu {
+  position: relative;
   display: block;
+  background-color: transparent;
+  border: none;
+  box-shadow: none;
+  padding: 0;
+  border-radius: 0;
   z-index: 2002;
   min-width: 100%;
-  padding-left: 2px;
-  padding-right: 2px;
 }
 div.dt-button-collection.fixed {
   position: fixed;
+  display: block;
   top: 50%;
   left: 50%;
   margin-left: -75px;
@@ -245,22 +256,6 @@ div.dt-button-collection.columns.dtb-b1 .dt-button {
   div.dt-button-collection.columns > :last-child {
     width: 200px;
   }
-}
-div.dt-button-collection.fixed {
-  background-color: white;
-  border: 1px solid rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
-  padding: 0.5rem 0;
-  max-width: none;
-}
-div.dt-button-collection.fixed .dropdown-menu {
-  position: relative;
-  background-color: transparent;
-  border: none;
-  box-shadow: none;
-  padding: 0;
-  border-radius: 0;
 }
 div.dt-button-collection.fixed:before, div.dt-button-collection.fixed:after {
   display: none;
