c799a66f2bcaa0967a8a4df32d0fe6dc40a07839 Fix: Bootstrap 5 integration with split buttons had a min-width incorrectly applied
https://datatables.net/forums/discussion/72151/

7ec8b48bfc3b566498528975a137a134b3b1f559 Merge branch 'master' of github.com:DataTables/Buttons

Sync to source repo @7ec8b48bfc3b566498528975a137a134b3b1f559

--- a/css/buttons.bootstrap5.css
+++ b/css/buttons.bootstrap5.css
@@ -272,7 +272,7 @@ div.dt-button-collection.fixed:before, div.dt-button-collection.fixed:after {
 div.dt-button-collection .btn-group {
   flex: 1 1 auto;
 }
-div.dt-button-collection .dt-button {
+div.dt-button-collection .dt-button:not(.dt-btn-split-drop) {
   min-width: 200px;
 }
 div.dt-button-collection div.dt-btn-split-wrapper {
