--- a/css/buttons.bootstrap5.css
+++ b/css/buttons.bootstrap5.css
@@ -126,29 +126,13 @@ div.dt-button-collection span.dt-button-spacer.bar {
   padding-left: 0;
 }
 
-div.dt-button-collection {
-  position: absolute;
-  margin-top: 3px;
-  z-index: 2001;
-  background-color: white;
-  border: 1px solid rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
-  padding: 0.5rem;
-  width: 218px;
+div.dt-buttons div.btn-group {
+  position: initial;
 }
-div.dt-button-collection div.dropdown-menu {
-  position: relative;
-  display: block;
-  background-color: transparent;
-  border: none;
-  box-shadow: none;
-  padding: 0;
-  border-radius: 0;
-  z-index: 2002;
-  min-width: 100%;
+div.dt-buttons div.dropdown-menu {
+  margin-top: 4px;
 }
-div.dt-button-collection div.dropdown-menu div.dt-button-split {
+div.dt-buttons div.dropdown-menu div.dt-button-split {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -156,16 +140,12 @@ div.dt-button-collection div.dropdown-menu div.dt-button-split {
   align-content: flex-start;
   align-items: stretch;
 }
-div.dt-button-collection div.dropdown-menu div.dt-button-split a:first-child {
-  margin: 0;
-  display: inline-block;
-  width: 0;
+div.dt-buttons div.dropdown-menu div.dt-button-split a:first-child {
   min-width: auto;
-  flex-grow: 1;
-  flex-shrink: 0;
-  flex-basis: 50px;
+  flex: 1 0 50px;
+  padding-right: 0;
 }
-div.dt-button-collection div.dropdown-menu div.dt-button-split button:last-child {
+div.dt-buttons div.dropdown-menu div.dt-button-split button:last-child {
   min-width: 33px;
   flex: 0;
   background: transparent;
@@ -174,141 +154,39 @@ div.dt-button-collection div.dropdown-menu div.dt-button-split button:last-child
   color: var(--bs-dropdown-link-color);
   padding: var(--bs-dropdown-item-padding-y) var(--bs-dropdown-item-padding-x);
 }
-div.dt-button-collection div.dropdown-menu div.dt-button-split button:last-child:hover {
+div.dt-buttons div.dropdown-menu div.dt-button-split button:last-child:hover {
   color: var(--bs-dropdown-link-hover-color);
   background-color: var(--bs-dropdown-link-hover-bg);
 }
-div.dt-button-collection.fixed {
-  position: fixed;
-  display: block;
+div.dt-buttons div.dropdown-menu div.dt-button-split button:last-child:after {
+  position: relative;
+  left: -3px;
+}
+div.dt-buttons span.dt-button-spacer.bar:empty {
+  height: inherit;
+}
+div.dt-buttons .btn.processing {
+  color: rgba(0, 0, 0, 0.2);
+}
+div.dt-buttons .btn.processing:after {
+  position: absolute;
   top: 50%;
   left: 50%;
-  margin-left: -75px;
-  border-radius: 5px;
-  background-color: white;
-}
-div.dt-button-collection.fixed.two-column {
-  margin-left: -200px;
-}
-div.dt-button-collection.fixed.three-column {
-  margin-left: -225px;
-}
-div.dt-button-collection.fixed.four-column {
-  margin-left: -300px;
-}
-div.dt-button-collection.fixed.columns {
-  margin-left: -409px;
-}
-@media screen and (max-width: 1024px) {
-  div.dt-button-collection.fixed.columns {
-    margin-left: -308px;
-  }
-}
-@media screen and (max-width: 640px) {
-  div.dt-button-collection.fixed.columns {
-    margin-left: -203px;
-  }
-}
-@media screen and (max-width: 460px) {
-  div.dt-button-collection.fixed.columns {
-    margin-left: -100px;
-  }
-}
-div.dt-button-collection.fixed > :last-child {
-  max-height: 100vh;
-  overflow: auto;
-}
-div.dt-button-collection.two-column > :last-child, div.dt-button-collection.three-column > :last-child, div.dt-button-collection.four-column > :last-child {
-  display: block !important;
-  -webkit-column-gap: 8px;
-  -moz-column-gap: 8px;
-  -ms-column-gap: 8px;
-  -o-column-gap: 8px;
-  column-gap: 8px;
-}
-div.dt-button-collection.two-column > :last-child > *, div.dt-button-collection.three-column > :last-child > *, div.dt-button-collection.four-column > :last-child > * {
-  -webkit-column-break-inside: avoid;
-  break-inside: avoid;
-}
-div.dt-button-collection.two-column {
-  width: 400px;
-}
-div.dt-button-collection.two-column > :last-child {
-  padding-bottom: 1px;
-  column-count: 2;
-}
-div.dt-button-collection.three-column {
-  width: 450px;
-}
-div.dt-button-collection.three-column > :last-child {
-  padding-bottom: 1px;
-  column-count: 3;
-}
-div.dt-button-collection.four-column {
-  width: 600px;
-}
-div.dt-button-collection.four-column > :last-child {
-  padding-bottom: 1px;
-  column-count: 4;
-}
-div.dt-button-collection .dt-button {
-  border-radius: 0;
-}
-div.dt-button-collection.columns {
-  width: auto;
-}
-div.dt-button-collection.columns > :last-child {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 6px;
-  width: 818px;
-  padding-bottom: 1px;
-}
-div.dt-button-collection.columns > :last-child .dt-button {
-  min-width: 200px;
-  flex: 0 1;
-  margin: 0;
-}
-div.dt-button-collection.columns.dtb-b3 > :last-child, div.dt-button-collection.columns.dtb-b2 > :last-child, div.dt-button-collection.columns.dtb-b1 > :last-child {
-  justify-content: space-between;
-}
-div.dt-button-collection.columns.dtb-b3 .dt-button {
-  flex: 1 1 32%;
-}
-div.dt-button-collection.columns.dtb-b2 .dt-button {
-  flex: 1 1 48%;
-}
-div.dt-button-collection.columns.dtb-b1 .dt-button {
-  flex: 1 1 100%;
-}
-@media screen and (max-width: 1024px) {
-  div.dt-button-collection.columns > :last-child {
-    width: 612px;
-  }
-}
-@media screen and (max-width: 640px) {
-  div.dt-button-collection.columns > :last-child {
-    width: 406px;
-  }
-  div.dt-button-collection.columns.dtb-b3 .dt-button {
-    flex: 0 1 32%;
-  }
-}
-@media screen and (max-width: 460px) {
-  div.dt-button-collection.columns > :last-child {
-    width: 200px;
-  }
-}
-div.dt-button-collection.fixed:before, div.dt-button-collection.fixed:after {
-  display: none;
-}
-div.dt-button-collection .btn-group {
-  flex: 1 1 auto;
-}
-div.dt-button-collection .dt-button:not(.dt-btn-split-drop) {
-  min-width: 200px;
+  width: 16px;
+  height: 16px;
+  margin: -8px 0 0 -8px;
+  box-sizing: border-box;
+  display: block;
+  content: " ";
+  border: 2px solid #282828;
+  border-radius: 50%;
+  border-left-color: transparent;
+  border-right-color: transparent;
+  animation: dtb-spinner 1500ms infinite linear;
+  -o-animation: dtb-spinner 1500ms infinite linear;
+  -ms-animation: dtb-spinner 1500ms infinite linear;
+  -webkit-animation: dtb-spinner 1500ms infinite linear;
+  -moz-animation: dtb-spinner 1500ms infinite linear;
 }
 
 div.dt-button-background {
@@ -330,90 +208,4 @@ div.dt-button-background {
   div.dt-buttons a.btn {
     float: none;
   }
-}
-div.dt-buttons button.btn.processing,
-div.dt-buttons div.btn.processing,
-div.dt-buttons a.btn.processing {
-  color: rgba(0, 0, 0, 0.2);
-}
-div.dt-buttons button.btn.processing:after,
-div.dt-buttons div.btn.processing:after,
-div.dt-buttons a.btn.processing:after {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 16px;
-  height: 16px;
-  margin: -8px 0 0 -8px;
-  box-sizing: border-box;
-  display: block;
-  content: " ";
-  border: 2px solid #282828;
-  border-radius: 50%;
-  border-left-color: transparent;
-  border-right-color: transparent;
-  animation: dtb-spinner 1500ms infinite linear;
-  -o-animation: dtb-spinner 1500ms infinite linear;
-  -ms-animation: dtb-spinner 1500ms infinite linear;
-  -webkit-animation: dtb-spinner 1500ms infinite linear;
-  -moz-animation: dtb-spinner 1500ms infinite linear;
-}
-div.dt-buttons div.btn-group {
-  position: initial;
-}
-div.dt-buttons span.dt-button-down-arrow {
-  display: none;
-}
-
-div.dataTables_wrapper div.dt-buttons.btn-group div.btn-group {
-  border-radius: 4px !important;
-}
-div.dataTables_wrapper div.dt-buttons.btn-group div.btn-group:last-child {
-  border-top-left-radius: 0px !important;
-  border-bottom-left-radius: 0px !important;
-}
-div.dataTables_wrapper div.dt-buttons.btn-group div.btn-group:first-child {
-  border-top-right-radius: 0px !important;
-  border-bottom-right-radius: 0px !important;
-}
-div.dataTables_wrapper div.dt-buttons.btn-group div.btn-group:last-child:first-child {
-  border-top-left-radius: 4px !important;
-  border-bottom-left-radius: 4px !important;
-  border-top-right-radius: 4px !important;
-  border-bottom-right-radius: 4px !important;
-}
-
-div.dt-button-collection div.btn-group {
-  border-radius: 4px !important;
-}
-div.dt-button-collection div.btn-group button {
-  border-radius: 4px;
-}
-div.dt-button-collection div.btn-group button:last-child {
-  border-top-left-radius: 0px !important;
-  border-bottom-left-radius: 0px !important;
-}
-div.dt-button-collection div.btn-group button:first-child {
-  border-top-right-radius: 0px !important;
-  border-bottom-right-radius: 0px !important;
-}
-div.dt-button-collection div.btn-group button:last-child:first-child {
-  border-top-left-radius: 4px !important;
-  border-bottom-left-radius: 4px !important;
-  border-top-right-radius: 4px !important;
-  border-bottom-right-radius: 4px !important;
-}
-
-span.dt-button-spacer.bar:empty {
-  height: inherit;
-}
-
-div.dt-button-collection span.dt-button-spacer {
-  padding-left: 1rem !important;
-  text-align: left;
-}
-
-html.dark div.dt-button-collection {
-  background-color: #212529;
-  border: 1px solid rgba(255, 255, 255, 0.15);
 }
