a192fe7ef7e29c36247c573101deb782e2edce6c Bootstrap 4 and 5 reinitegration
Sync to source repo @a192fe7ef7e29c36247c573101deb782e2edce6c

--- a/css/buttons.bootstrap5.css
+++ b/css/buttons.bootstrap5.css
@@ -162,6 +162,9 @@ div.dt-buttons div.dropdown-menu div.dt-button-split button:last-child:after {
   position: relative;
   left: -3px;
 }
+div.dt-buttons span.dt-button-spacer.empty {
+  margin: 1px;
+}
 div.dt-buttons span.dt-button-spacer.bar:empty {
   height: inherit;
 }
