b454a4b4d977c6452f017d059e9dd2a1cedb74e8 Examples: Updated for DataTables 2. Focus is on the `-init layout` option, rather than the legacy `-init dom` option Examples: All examples now have a Vanilla JS variant Examples: All examples formatted using prettier-more for consistent styling of the code.
c2c273d6666702ac362945b08fc2f0fa1254308d Docs: Update for Buttons as a "feature" in DataTables 2

59096dc26c70e1442113e4ed4ef58f5906e302d9 New: Support for multi-row and complex headers and footers in PDF export.
New: PDF page size will default to `LETTER` for US and Canadian locales
Updated: Footer is now included in the PDF export by default

39e199db8bafabdac47a354ffa9185205c8401f1 New: Excel export supports multi-row header and footers now
New: Excel export supports colspan / rowspan in the header and footer
Updated: Footers are included in the Excel export by default

f8b13e5971053e1a5c41b3d7b3086f86f5545648 New: Copy and CSV now support multi-row headers
New: Copy and CSV now support colspan / rowspan by using an empty string as filler.
Updated: Documentation removes mention of the fact that IE8/9 are not supported. This is now a core part of the DataTables support - no IE, so it doesn't need to be explicity noted.

969e7ea124756f2cf062548a0745765d9925ea1e Fix - typescript: Explicit void return type for new constructor

957981e0bd3ce1df25eb7d01b43880323292fc07 Dev: Correction for version check text

fa40d42cd90d057880bf16d53ef23f2da2a86eb6 Dev: Update exports as the structure methods from DT now contain the nulls for empty cells, rather than needing to add them here

d954584f5251e029622c7473655ada0f42f93412 New: Print export includes support for multi-row headers and footers
New: Print export includes support for colspan / rowspan in headers and footers

dfba5a206c768697a84633a01a425c709e376918 Dev: Reformatting with prettier

320cf1a869526d806c7f4308c4bcf0f726e09e93 New example: Explain and show how CSS can be applied specifically for print view only

c0bbb03ab03ed

--- a/css/buttons.bootstrap5.css
+++ b/css/buttons.bootstrap5.css
@@ -37,6 +37,7 @@ div.dt-buttons {
 div.dt-buttons .dt-button {
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 div.dt-button-info {
@@ -80,10 +81,13 @@ button.dtb-hide-drop {
 
 div.dt-button-collection-title {
   text-align: center;
-  padding: 0.3em 0 0.5em;
+  padding: 0.3em 0.5em 0.5em;
   margin-left: 0.5em;
   margin-right: 0.5em;
   font-size: 0.9em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 div.dt-button-collection-title:empty {
@@ -172,6 +176,7 @@ div.dt-buttons div.btn-group {
 }
 div.dt-buttons div.dropdown-menu {
   margin-top: 4px;
+  width: 200px;
 }
 div.dt-buttons div.dropdown-menu .dt-button {
   position: relative;
@@ -197,6 +202,7 @@ div.dt-buttons div.dropdown-menu div.dt-button-split button:last-child {
   line-height: 1rem;
   color: var(--bs-dropdown-link-color);
   padding: var(--bs-dropdown-item-padding-y) var(--bs-dropdown-item-padding-x);
+  overflow: visible;
 }
 div.dt-buttons div.dropdown-menu div.dt-button-split button:last-child:hover {
   color: var(--bs-dropdown-link-hover-color);
