2a874395e66a44971965d44a20657a45d4459f86 Fix: Disable row shading for print
afb6b2ab3eb7ae0f573eb5a3e0eeb9257ce478fd Fix: Set default orthogonal data for export to be `display`

DD-2832

fc0525281bbafe22cd4aafa7fd739248e1b2f74b Dev: Clear up some legacy CSS and no wrapping top level buttons

2b03d3dc5bdb4ab46914de0b9b0df4e1ebc3f891 Dev: Undo no wrap - caused too many issues (eg Editor nested)

Sync to source repo @2b03d3dc5bdb4ab46914de0b9b0df4e1ebc3f891

--- a/css/buttons.bootstrap5.css
+++ b/css/buttons.bootstrap5.css
@@ -166,6 +166,11 @@ div.dt-button-collection span.dt-button-spacer.bar {
   padding-left: 0;
 }
 
+@media print {
+  table.dataTable tr > * {
+    box-shadow: none !important;
+  }
+}
 html.dark div.dt-button-info {
   background-color: var(--dt-html-background);
   border: 1px solid rgba(255, 255, 255, 0.15);
@@ -355,7 +360,7 @@ div.dt-buttons .btn.processing:after {
   box-sizing: border-box;
   display: block;
   content: " ";
-  border: 2px solid #282828;
+  border: 2px solid rgb(40, 40, 40);
   border-radius: 50%;
   border-left-color: transparent;
   border-right-color: transparent;
@@ -387,7 +392,7 @@ div.dt-button-background {
   }
 }
 :root[data-bs-theme=dark] div.dropdown-menu.dt-button-collection.fixed {
-  background-color: #212529;
+  background-color: rgb(33, 37, 41);
   border: 1px solid rgba(255, 255, 255, 0.15);
   border-radius: 8px;
 }
